overflow css fix and some other past stuff

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-a {
-  color: rgb(170, 170, 170);
-  color: #c54832;
-  color: #d3c333;
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
 }
